timeware/src/objects/Location__c.object
<CustomObject>
    <description>An entity within an organization where employee&apos;s are grouped for reporting purposes and security.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is location available for use? Using flag instead of deleting location.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Enter a description for this location.</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Format__c</fullName>
        <label>Time Format</label>
        <picklist>
            <picklistValues>
                <fullName>Military Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>AllLocations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <nameField>
        <label>Location Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>